# cpp-implant

./: .gitignore  CMakeLists.txt  README.md
cnc/: cnc-test.py  cnc.py
headers/: implant.h  results.h  tasks.h
sample/: tasks.json
src/: CMakeLists.txt  implant.cpp  implant_test.cpp  main.cpp  results.cpp  tasks.cpp
